Fix overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,10 +48,6 @@ a {
 
 img{ filter: opacity()}
 
-* {
-overflow-y: hidden; /* Hide vertical scrollbar */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
-}
 
 .jumbo {
   background-image: url('../assets/familia.png');
